--- a/index.html
+++ b/index.html
@@ -4,29 +4,37 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Portfolio</title>
-        <link rel="icon" type="image/svg" href="img/Logo.svg">
+        <link rel="icon" type="image/svg" href="img/Logo.svg" />
         <link rel="stylesheet" href="styles.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+        />
     </head>
     <body>
         <header>
             <span>© Mamedov Artur 2024</span>
             <button class="btn" id="welcome-btn" data-target="welcome">
-                <img src="img/Logo.svg" alt="Logo" class="logo"></button>
+                <img src="img/Logo.svg" alt="Logo" class="logo" />
+            </button>
         </header>
 
         <!-- Основной контейнер для фреймов -->
         <div class="frames-container">
-
             <div class="frame active" id="welcome">
                 <div class="content">
                     <h1 class="text" id="welcome-text-1">You’re Welcome.</h1>
-                    <h1 class="text hidden" id="welcome-text-2">I’m Mamedov Artur</h1>
+                    <h1 class="text hidden" id="welcome-text-2">
+                        I’m Mamedov Artur
+                    </h1>
                 </div>
             </div>
-
 
             <div class="frame" id="about-me">
                 <div class="content">
@@ -35,19 +43,17 @@
             </div>
 
             <div class="frame" id="stack">
-
                 <div class="content" id="stack_container">
-
                     <div class="stack_block card">
-                        <img src="img/stack/PythonLogo.svg" alt="PythonLogo">
+                        <img src="img/stack/PythonLogo.svg" alt="PythonLogo" />
                         <div class="stack_content">
                             <span class="stack_name">Python</span>
                             <span class="stack_yo_exp">4+ years</span>
                         </div>
-                    </div>      
+                    </div>
 
                     <div class="stack_block card">
-                        <img src="img/stack/GithubLogo.svg" alt="GitHubLogo">
+                        <img src="img/stack/GithubLogo.svg" alt="GitHubLogo" />
                         <div class="stack_content">
                             <span class="stack_name">GitHub</span>
                             <span class="stack_yo_exp">3+ years</span>
@@ -55,15 +61,18 @@
                     </div>
 
                     <div class="stack_block card">
-                        <img src="img/stack/VSCodeLogo.svg" alt="VSCodeLogo">
+                        <img src="img/stack/VSCodeLogo.svg" alt="VSCodeLogo" />
                         <div class="stack_content">
                             <span class="stack_name">VSCode</span>
                             <span class="stack_yo_exp">3+ years</span>
                         </div>
-                    </div>                    
-                    
+                    </div>
+
                     <div class="stack_block card">
-                        <img src="img/stack/PhotoshopLogo.svg" alt="PhotoshopLogo">
+                        <img
+                            src="img/stack/PhotoshopLogo.svg"
+                            alt="PhotoshopLogo"
+                        />
                         <div class="stack_content">
                             <span class="stack_name">Photoshop</span>
                             <span class="stack_yo_exp">3+ years</span>
@@ -71,7 +80,7 @@
                     </div>
 
                     <div class="stack_block card">
-                        <img src="img/stack/SqlLogo.svg" alt="SqlLogo">
+                        <img src="img/stack/SqlLogo.svg" alt="SqlLogo" />
                         <div class="stack_content">
                             <span class="stack_name">SQL</span>
                             <span class="stack_yo_exp">2+ years</span>
@@ -79,7 +88,7 @@
                     </div>
 
                     <div class="stack_block card">
-                        <img src="img/stack/FigmaLogo.svg" alt="FigmaLogo">
+                        <img src="img/stack/FigmaLogo.svg" alt="FigmaLogo" />
                         <div class="stack_content">
                             <span class="stack_name">Figma</span>
                             <span class="stack_yo_exp">2+ years</span>
@@ -87,7 +96,7 @@
                     </div>
 
                     <div class="stack_block card">
-                        <img src="img/stack/CssLogo.svg" alt="CssLogo">
+                        <img src="img/stack/CssLogo.svg" alt="CssLogo" />
                         <div class="stack_content">
                             <span class="stack_name">CSS</span>
                             <span class="stack_yo_exp">2+ years</span>
@@ -95,7 +104,7 @@
                     </div>
 
                     <div class="stack_block card">
-                        <img src="img/stack/HtmlLogo.svg" alt="HtmlLogo">
+                        <img src="img/stack/HtmlLogo.svg" alt="HtmlLogo" />
                         <div class="stack_content">
                             <span class="stack_name">HTML</span>
                             <span class="stack_yo_exp">2+ years</span>
@@ -103,7 +112,7 @@
                     </div>
 
                     <div class="stack_block card">
-                        <img src="img/stack/JsLogo.svg" alt="JavaScriptLogo">
+                        <img src="img/stack/JsLogo.svg" alt="JavaScriptLogo" />
                         <div class="stack_content">
                             <span class="stack_name">JavaScript</span>
                             <span class="stack_yo_exp">2+ year</span>
@@ -111,7 +120,7 @@
                     </div>
 
                     <div class="stack_block card">
-                        <img src="img/stack/PhpLogo.svg" alt="PhpLogo">
+                        <img src="img/stack/PhpLogo.svg" alt="PhpLogo" />
                         <div class="stack_content">
                             <span class="stack_name">PHP</span>
                             <span class="stack_yo_exp">1+ year</span>
@@ -120,11 +129,51 @@
                 </div>
             </div>
 
-
             <div class="frame" id="projects">
                 <div class="content">
-                    <h1>Projects</h1>
-                    <p>Here are some of the projects I've worked on.</p>
+                    <div class="swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="project-card">
+                                    <img
+                                        src="https://via.placeholder.com/300x200"
+                                        alt="Проект 1"
+                                        loading="lazy"
+                                    />
+
+                                    <h2>Проект 1</h2>
+                                    <p>Краткое описание проекта.</p>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="project-card">
+                                    <img
+                                        src="https://via.placeholder.com/300x200"
+                                        alt="Проект 1"
+                                        loading="lazy"
+                                    />
+
+                                    <h2>Проект 2</h2>
+                                    <p>Краткое описание проекта.</p>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="project-card">
+                                    <img
+                                        src="https://via.placeholder.com/300x200"
+                                        alt="Проект 1"
+                                        loading="lazy"
+                                    />
+
+                                    <h2>Проект 3</h2>
+                                    <p>Краткое описание проекта.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Кнопки управления -->
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
                 </div>
             </div>
 
@@ -141,15 +190,20 @@
 
         <footer>
             <button class="btn" id="adout-me-btn" data-target="about-me">
-                <img src="img/Person.svg" alt="AboutMe">About me</button>
+                <img src="img/Person.svg" alt="AboutMe" />About me
+            </button>
             <button class="btn" id="stack-btn" data-target="stack">
-                <img src="img/Book.svg" alt="Stack">Stack</button>
+                <img src="img/Book.svg" alt="Stack" />Stack
+            </button>
             <button class="btn" id="projects-btn" data-target="projects">
-                <img src="img/Folder.svg" alt="Projects">Projects</button>
+                <img src="img/Folder.svg" alt="Projects" />Projects
+            </button>
             <button class="btn" id="contacts-btn" data-target="contacts">
-                <img src="img/Phone.svg" alt="Contacts">Contacts</button>
+                <img src="img/Phone.svg" alt="Contacts" />Contacts
+            </button>
         </footer>
 
+        <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
