--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@
                     </h1>
                 </div>
             </div>
-
             <div class="frame" id="about-me">
                 <div class="content">
                     <div id="typing-text"></div>
                 </div>
             </div>
-
             <div class="frame" id="stack">
                 <div class="content" id="stack_container">
                     <div class="stack_block card">
@@ -136,37 +134,47 @@
                             <div class="swiper-slide">
                                 <div class="project-card">
                                     <img
-                                        src="https://via.placeholder.com/300x200"
+                                        src="https://via.placeholder.com/300x300"
                                         alt="Проект 1"
                                         loading="lazy"
                                     />
-
-                                    <h2>Проект 1</h2>
-                                    <p>Краткое описание проекта.</p>
+                                    <div>
+                                        <h2>Dexy</h2>
+                                        <p>
+                                            First Individual Project Created in
+                                            Q3 2021. This was my first
+                                            full-fledged project — a Discord bot
+                                            written in Python. It provides
+                                            moderation tools and an economic
+                                            environment with mini-games,
+                                            allowing users to earn points and
+                                            level up. Thanks to my initiative, I
+                                            significantly developed algorithmic
+                                            and logical thinking.
+                                        </p>
+                                        <div class="stacks-for-project">
+                                            <div class="stack-for-project">
+                                                <p>#Python</p>
+                                            </div>
+                                            <div class="stack-for-project">
+                                                <p>#DiscordAPI</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+
                             <div class="swiper-slide">
                                 <div class="project-card">
                                     <img
-                                        src="https://via.placeholder.com/300x200"
+                                        src="https://via.placeholder.com/300x300"
                                         alt="Проект 1"
                                         loading="lazy"
                                     />
-
-                                    <h2>Проект 2</h2>
-                                    <p>Краткое описание проекта.</p>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="project-card">
-                                    <img
-                                        src="https://via.placeholder.com/300x200"
-                                        alt="Проект 1"
-                                        loading="lazy"
-                                    />
-
-                                    <h2>Проект 3</h2>
-                                    <p>Краткое описание проекта.</p>
+                                    <div class="">
+                                        <h2>Проект 2</h2>
+                                        <p>Краткое описание проекта.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
