--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
         <!-- Основные метаданные -->
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Portfolio</title>
+        <title>Mamedov Artur</title>
 
         <!-- Иконка и стили -->
-        <link rel="icon" type="image/svg" href="img/Logo.svg" />
-        <link rel="stylesheet" href="styles.css" />
 
-        <!-- Шрифты -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap"
-            rel="stylesheet"
-        />
+        <!-- <link rel="icon" media="(prefers-color-scheme: light)" href="img/Logo_Dark.png" type="image/png">
+        <link rel="icon" media="(prefers-color-scheme: dark)" href="img/Logo_Light.png" type="image/png"> -->
+
+        <link rel="icon" href="img/Logo_Dark.svg" type="image/svg">
+        <link rel="stylesheet" href="styles.css" />
 
         <!-- Стили Swiper -->
         <link
@@ -27,7 +23,7 @@
     <body>
         <!-- Хедер -->
         <header>
-            <span>© Mamedov Artur 2024</span>
+            <span>© Mamedov Artur 2025</span>
             <button class="btn" id="welcome-btn" data-target="welcome">
                 <img src="img/Logo.svg" alt="Logo" class="logo" />
             </button>
@@ -111,7 +107,7 @@
                         <img src="img/stack/CssLogo.svg" alt="CssLogo" />
                         <div class="stack_content">
                             <span class="stack_name">CSS</span>
-                            <span class="stack_yo_exp">2+ years</span>
+                            <span class="stack_yo_exp">3+ years</span>
                         </div>
                     </div>
 
@@ -119,7 +115,7 @@
                         <img src="img/stack/HtmlLogo.svg" alt="HtmlLogo" />
                         <div class="stack_content">
                             <span class="stack_name">HTML</span>
-                            <span class="stack_yo_exp">2+ years</span>
+                            <span class="stack_yo_exp">3+ years</span>
                         </div>
                     </div>
 
@@ -151,7 +147,7 @@
                                 <div class="project-card">
                                     <div class="project-img">
                                         <img
-                                            src="img/dexy.png"
+                                            src="img/dexy.webp"
                                             alt="Dexy Project"
                                             loading="lazy"
                                             class="project-image"
@@ -192,7 +188,7 @@
                                 <div class="project-card">
                                     <div class="project-img">
                                         <img
-                                            src="img/ca2023.png"
+                                            src="img/ca2023.webp"
                                             alt="CA 2023 Project"
                                             loading="lazy"
                                         />
@@ -224,9 +220,6 @@
                                             </div>
                                         </div>
                                         <div class="card-buttons">
-                                            <!-- <button class="btn-more">
-                                                More...
-                                            </button> -->
                                             <a
                                                 href="https://github.com/Tripchanski/Christmas_Adventure_2023"
                                                 target="_blank"
@@ -294,9 +287,6 @@
                                             </div>
                                         </div>
                                         <div class="card-buttons">
-                                            <!-- <button class="btn-more">
-                                                More...
-                                            </button> -->
                                             <a
                                                 href="https://github.com/Tripchanski/FlareRestaurant"
                                                 target="_blank"
@@ -382,7 +372,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Навигация Swiper -->
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
@@ -395,35 +384,35 @@
                     <div class="contacts">
                         <div class="contact">
                             <a
-                                href="https://t.me/Trip_Tripchanski"
+                                href="https://t.me/Mamedov_Artur"
                                 target="_blank"
                                 rel="noopener noreferrer"
                                 ><img
                                     src="img/Telegram.svg"
                                     alt="Telegram"
-                                />@Trip_Tripchanski</a
+                                />@Mamedov_Artur</a
                             >
                         </div>
                         <div class="contact">
                             <a
-                                href="https://github.com/Tripchanski"
+                                href="https://github.com/Mamedov-Artur"
                                 target="_blank"
                                 rel="noopener noreferrer"
                                 ><img
                                     src="img/Github.svg"
                                     alt="Github"
-                                />Tripchanski</a
+                                />Mamedov-Artur</a
                             >
                         </div>
                         <div class="contact">
                             <a
-                                href="https://www.linkedin.com/in/trip-tripchanski-428299279/"
+                                href="https://www.linkedin.com/in/artur-mamedov-428299279/"
                                 target="_blank"
                                 rel="noopener noreferrer"
                                 ><img
                                     src="img/Linkedin.svg"
                                     alt="LinkedIN"
-                                />Trip Tripchanski</a
+                                />Artur Mamedov</a
                             >
                         </div>
                     </div>
