--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mamedov Artur</title>
-
+        <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
+        </style>
         <!-- <link rel="icon" media="(prefers-color-scheme: light)" href="img/Logo_Dark.png" type="image/png">
         <link rel="icon" media="(prefers-color-scheme: dark)" href="img/Logo_Light.png" type="image/png"> -->
 
